# rust_fileexplorer

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh  justfile  morning_changes.html  test_demo.sh  test_simple.sh
.claude/: CLAUDE.md  settings.json
.claude/Skills/rust/: SKILL.md
docs/: COMMAND_REFERENCE.md  COMPARISON.md  DX_WORKFLOWS.md  FEXPLORER_USER_GUIDE.md  HOW_TO_TEST.md  INSTALLATION.md  PX_IMPLEMENTATION_PLAN.md  PX_USER_GUIDE.md  QUICK_START.md  README.md  TESTING.md  VERIFIED_COMMANDS.md  WORKFLOWS.md
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  util.rs
src/fs/: content.rs  dedup.rs  filters.rs  git.rs  metadata.rs  mod.rs  size.rs  traverse.rs  watch.rs
src/models/: category.rs  duplicate.rs  entry.rs  git_status.rs  match_result.rs  mod.rs
src/output/: csvw.rs  format.rs  json.rs  mod.rs  pretty.rs  templates.rs
src/px/: commands.rs  frecency.rs  index.rs  mod.rs  project.rs  search.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: integration_tests.rs
